--- a/public/assets/css/bootstrap-dark.css
+++ b/public/assets/css/bootstrap-dark.css
@@ -13,24 +13,24 @@ File: Custom Bootstrap Css File
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
 :root {
-  --bs-blue: #36b9cc;
+  --bs-blue: #78aed8;
   --bs-indigo: #564ab1;
   --bs-purple: #777edd;
   --bs-pink: #ff679b;
   --bs-red: #f1556c;
   --bs-orange: #f1734f;
-  --bs-yellow: #f9bc0b;
+  --bs-yellow: #2b7a9a;
   --bs-green: #0acf97;
   --bs-teal: #050505;
-  --bs-cyan: #36b9cc;
+  --bs-cyan: #78aed8;
   --bs-white: #fff;
   --bs-gray: #8f93a4;
   --bs-gray-dark: #eff2f7;
-  --bs-primary: #36b9cc;
+  --bs-primary: #78aed8;
   --bs-secondary: #8f93a4;
   --bs-success: #0acf97;
-  --bs-info: #36b9cc;
-  --bs-warning: #f9bc0b;
+  --bs-info: #78aed8;
+  --bs-warning: #2b7a9a;
   --bs-danger: #f1556c;
   --bs-purple: #777edd;
   --bs-pink: #ff679b;
@@ -172,7 +172,7 @@ sup {
   top: -.5em; }
 
 a {
-  color: #36b9cc;
+  color: #78aed8;
   text-decoration: none; }
   a:hover {
     color: #3682a8; }
@@ -204,7 +204,7 @@ pre {
 
 code {
   font-size: 0.875em;
-  color: #36b9cc;
+  color: #78aed8;
   word-wrap: break-word; }
   a > code {
     color: inherit; }
@@ -2016,15 +2016,15 @@ textarea.form-control-lg {
     -webkit-box-shadow: 0 0 0 0.15rem rgba(68, 162, 210, 0.25);
             box-shadow: 0 0 0 0.15rem rgba(68, 162, 210, 0.25); }
   .form-check-input:checked {
-    background-color: #36b9cc;
-    border-color: #36b9cc; }
+    background-color: #78aed8;
+    border-color: #78aed8; }
     .form-check-input:checked[type="checkbox"] {
       background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10l3 3l6-6'/%3e%3c/svg%3e"); }
     .form-check-input:checked[type="radio"] {
       background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='2' fill='%23fff'/%3e%3c/svg%3e"); }
   .form-check-input[type="checkbox"]:indeterminate {
-    background-color: #36b9cc;
-    border-color: #36b9cc;
+    background-color: #78aed8;
+    border-color: #78aed8;
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/%3e%3c/svg%3e"); }
   .form-check-input:disabled {
     pointer-events: none;
@@ -2089,7 +2089,7 @@ textarea.form-control-lg {
     width: 1rem;
     height: 1rem;
     margin-top: -0.25rem;
-    background-color: #36b9cc;
+    background-color: #78aed8;
     border: 0;
     border-radius: 1rem;
     -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -2115,7 +2115,7 @@ textarea.form-control-lg {
   .form-range::-moz-range-thumb {
     width: 1rem;
     height: 1rem;
-    background-color: #36b9cc;
+    background-color: #78aed8;
     border: 0;
     border-radius: 1rem;
     -moz-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2480,8 +2480,8 @@ textarea.form-control-lg {
 
 .btn-primary {
   color: #fff;
-  background-color: #36b9cc;
-  border-color: #36b9cc; }
+  background-color: #78aed8;
+  border-color: #78aed8; }
   .btn-primary:hover {
     color: #fff;
     background-color: #325b84;
@@ -2505,8 +2505,8 @@ textarea.form-control-lg {
               box-shadow: 0 0 0 0.15rem rgba(96, 176, 217, 0.5); }
   .btn-primary:disabled, .btn-primary.disabled {
     color: #fff;
-    background-color: #36b9cc;
-    border-color: #36b9cc; }
+    background-color: #78aed8;
+    border-color: #78aed8; }
 
 .btn-secondary {
   color: #fff;
@@ -2570,8 +2570,8 @@ textarea.form-control-lg {
 
 .btn-info {
   color: #fff;
-  background-color: #36b9cc;
-  border-color: #36b9cc; }
+  background-color: #78aed8;
+  border-color: #78aed8; }
   .btn-info:hover {
     color: #fff;
     background-color: #325b84;
@@ -2595,13 +2595,13 @@ textarea.form-control-lg {
               box-shadow: 0 0 0 0.15rem rgba(77, 143, 246, 0.5); }
   .btn-info:disabled, .btn-info.disabled {
     color: #fff;
-    background-color: #36b9cc;
-    border-color: #36b9cc; }
+    background-color: #78aed8;
+    border-color: #78aed8; }
 
 .btn-warning {
   color: #fff;
-  background-color: #f9bc0b;
-  border-color: #f9bc0b; }
+  background-color: #2b7a9a;
+  border-color: #2b7a9a; }
   .btn-warning:hover {
     color: #fff;
     background-color: #d4a009;
@@ -2625,8 +2625,8 @@ textarea.form-control-lg {
               box-shadow: 0 0 0 0.15rem rgba(250, 198, 48, 0.5); }
   .btn-warning:disabled, .btn-warning.disabled {
     color: #fff;
-    background-color: #f9bc0b;
-    border-color: #f9bc0b; }
+    background-color: #2b7a9a;
+    border-color: #2b7a9a; }
 
 .btn-danger {
   color: #fff;
@@ -2779,26 +2779,26 @@ textarea.form-control-lg {
     border-color: #eff2f7; }
 
 .btn-outline-primary {
-  color: #36b9cc;
-  border-color: #36b9cc; }
+  color: #78aed8;
+  border-color: #78aed8; }
   .btn-outline-primary:hover {
     color: #fff;
-    background-color: #36b9cc;
-    border-color: #36b9cc; }
+    background-color: #78aed8;
+    border-color: #78aed8; }
   .btn-check:focus + .btn-outline-primary, .btn-outline-primary:focus {
     -webkit-box-shadow: 0 0 0 0.15rem rgba(68, 162, 210, 0.5);
             box-shadow: 0 0 0 0.15rem rgba(68, 162, 210, 0.5); }
   .btn-check:checked + .btn-outline-primary,
   .btn-check:active + .btn-outline-primary, .btn-outline-primary:active, .btn-outline-primary.active, .btn-outline-primary.dropdown-toggle.show {
     color: #fff;
-    background-color: #36b9cc;
-    border-color: #36b9cc; }
+    background-color: #78aed8;
+    border-color: #78aed8; }
     .btn-check:checked + .btn-outline-primary:focus,
     .btn-check:active + .btn-outline-primary:focus, .btn-outline-primary:active:focus, .btn-outline-primary.active:focus, .btn-outline-primary.dropdown-toggle.show:focus {
       -webkit-box-shadow: 0 0 0 0.15rem rgba(68, 162, 210, 0.5);
               box-shadow: 0 0 0 0.15rem rgba(68, 162, 210, 0.5); }
   .btn-outline-primary:disabled, .btn-outline-primary.disabled {
-    color: #36b9cc;
+    color: #78aed8;
     background-color: transparent; }
 
 .btn-outline-secondary {
@@ -2848,49 +2848,49 @@ textarea.form-control-lg {
     background-color: transparent; }
 
 .btn-outline-info {
-  color: #36b9cc;
-  border-color: #36b9cc; }
+  color: #78aed8;
+  border-color: #78aed8; }
   .btn-outline-info:hover {
     color: #fff;
-    background-color: #36b9cc;
-    border-color: #36b9cc; }
+    background-color: #78aed8;
+    border-color: #78aed8; }
   .btn-check:focus + .btn-outline-info, .btn-outline-info:focus {
     -webkit-box-shadow: 0 0 0 0.15rem rgba(45, 123, 244, 0.5);
             box-shadow: 0 0 0 0.15rem rgba(45, 123, 244, 0.5); }
   .btn-check:checked + .btn-outline-info,
   .btn-check:active + .btn-outline-info, .btn-outline-info:active, .btn-outline-info.active, .btn-outline-info.dropdown-toggle.show {
     color: #fff;
-    background-color: #36b9cc;
-    border-color: #36b9cc; }
+    background-color: #78aed8;
+    border-color: #78aed8; }
     .btn-check:checked + .btn-outline-info:focus,
     .btn-check:active + .btn-outline-info:focus, .btn-outline-info:active:focus, .btn-outline-info.active:focus, .btn-outline-info.dropdown-toggle.show:focus {
       -webkit-box-shadow: 0 0 0 0.15rem rgba(45, 123, 244, 0.5);
               box-shadow: 0 0 0 0.15rem rgba(45, 123, 244, 0.5); }
   .btn-outline-info:disabled, .btn-outline-info.disabled {
-    color: #36b9cc;
+    color: #78aed8;
     background-color: transparent; }
 
 .btn-outline-warning {
-  color: #f9bc0b;
-  border-color: #f9bc0b; }
+  color: #2b7a9a;
+  border-color: #2b7a9a; }
   .btn-outline-warning:hover {
     color: #fff;
-    background-color: #f9bc0b;
-    border-color: #f9bc0b; }
+    background-color: #2b7a9a;
+    border-color: #2b7a9a; }
   .btn-check:focus + .btn-outline-warning, .btn-outline-warning:focus {
     -webkit-box-shadow: 0 0 0 0.15rem rgba(249, 188, 11, 0.5);
             box-shadow: 0 0 0 0.15rem rgba(249, 188, 11, 0.5); }
   .btn-check:checked + .btn-outline-warning,
   .btn-check:active + .btn-outline-warning, .btn-outline-warning:active, .btn-outline-warning.active, .btn-outline-warning.dropdown-toggle.show {
     color: #fff;
-    background-color: #f9bc0b;
-    border-color: #f9bc0b; }
+    background-color: #2b7a9a;
+    border-color: #2b7a9a; }
     .btn-check:checked + .btn-outline-warning:focus,
     .btn-check:active + .btn-outline-warning:focus, .btn-outline-warning:active:focus, .btn-outline-warning.active:focus, .btn-outline-warning.dropdown-toggle.show:focus {
       -webkit-box-shadow: 0 0 0 0.15rem rgba(249, 188, 11, 0.5);
               box-shadow: 0 0 0 0.15rem rgba(249, 188, 11, 0.5); }
   .btn-outline-warning:disabled, .btn-outline-warning.disabled {
-    color: #f9bc0b;
+    color: #2b7a9a;
     background-color: transparent; }
 
 .btn-outline-danger {
@@ -3010,7 +3010,7 @@ textarea.form-control-lg {
 
 .btn-link {
   font-weight: 400;
-  color: #36b9cc;
+  color: #78aed8;
   text-decoration: none; }
   .btn-link:hover {
     color: #3682a8; }
@@ -3354,7 +3354,7 @@ textarea.form-control-lg {
 .nav-link {
   display: block;
   padding: 0.5rem 1rem;
-  color: #36b9cc;
+  color: #78aed8;
   -webkit-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out; }
   @media (prefers-reduced-motion: reduce) {
@@ -3401,7 +3401,7 @@ textarea.form-control-lg {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #36b9cc; }
+  background-color: #78aed8; }
 
 .nav-fill > .nav-link,
 .nav-fill .nav-item {
@@ -4073,8 +4073,8 @@ textarea.form-control-lg {
 .page-item.active .page-link {
   z-index: 3;
   color: #fff;
-  background-color: #36b9cc;
-  border-color: #36b9cc; }
+  background-color: #78aed8;
+  border-color: #78aed8; }
 
 .page-item.disabled .page-link {
   color: #8f93a4;
@@ -4260,7 +4260,7 @@ textarea.form-control-lg {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #36b9cc;
+  background-color: #78aed8;
   -webkit-transition: width 0.6s ease;
   transition: width 0.6s ease; }
   @media (prefers-reduced-motion: reduce) {
@@ -4332,8 +4332,8 @@ textarea.form-control-lg {
   .list-group-item.active {
     z-index: 2;
     color: #fff;
-    background-color: #36b9cc;
-    border-color: #36b9cc; }
+    background-color: #78aed8;
+    border-color: #78aed8; }
   .list-group-item + .list-group-item {
     border-top-width: 0; }
     .list-group-item + .list-group-item.active {
@@ -5479,7 +5479,7 @@ textarea.form-control-lg {
   content: ""; }
 
 .link-primary {
-  color: #36b9cc; }
+  color: #78aed8; }
   .link-primary:hover, .link-primary:focus {
     color: #3682a8; }
 
@@ -5494,12 +5494,12 @@ textarea.form-control-lg {
     color: #08a679; }
 
 .link-info {
-  color: #36b9cc; }
+  color: #78aed8; }
   .link-info:hover, .link-info:focus {
     color: #1B7078; }
 
 .link-warning {
-  color: #f9bc0b; }
+  color: #2b7a9a; }
   .link-warning:hover, .link-warning:focus {
     color: #c79609; }
 
@@ -5812,7 +5812,7 @@ textarea.form-control-lg {
   border-left: 0 !important; }
 
 .border-primary {
-  border-color: #36b9cc !important; }
+  border-color: #78aed8 !important; }
 
 .border-secondary {
   border-color: #8f93a4 !important; }
@@ -5821,10 +5821,10 @@ textarea.form-control-lg {
   border-color: #0acf97 !important; }
 
 .border-info {
-  border-color: #36b9cc !important; }
+  border-color: #78aed8 !important; }
 
 .border-warning {
-  border-color: #f9bc0b !important; }
+  border-color: #2b7a9a !important; }
 
 .border-danger {
   border-color: #f1556c !important; }
@@ -6522,7 +6522,7 @@ textarea.form-control-lg {
 
 /* rtl:end:remove */
 .text-primary {
-  color: #36b9cc !important; }
+  color: #78aed8 !important; }
 
 .text-secondary {
   color: #8f93a4 !important; }
@@ -6531,10 +6531,10 @@ textarea.form-control-lg {
   color: #0acf97 !important; }
 
 .text-info {
-  color: #36b9cc !important; }
+  color: #78aed8 !important; }
 
 .text-warning {
-  color: #f9bc0b !important; }
+  color: #2b7a9a !important; }
 
 .text-danger {
   color: #f1556c !important; }
@@ -6570,7 +6570,7 @@ textarea.form-control-lg {
   color: inherit !important; }
 
 .bg-primary {
-  background-color: #36b9cc !important; }
+  background-color: #78aed8 !important; }
 
 .bg-secondary {
   background-color: #8f93a4 !important; }
@@ -6579,10 +6579,10 @@ textarea.form-control-lg {
   background-color: #0acf97 !important; }
 
 .bg-info {
-  background-color: #36b9cc !important; }
+  background-color: #78aed8 !important; }
 
 .bg-warning {
-  background-color: #f9bc0b !important; }
+  background-color: #2b7a9a !important; }
 
 .bg-danger {
   background-color: #f1556c !important; }
@@ -8829,7 +8829,7 @@ label {
   width: 10px; }
 
 [data-simplebar-primary] .simplebar-scrollbar:before {
-  background: #36b9cc; }
+  background: #78aed8; }
 
 [data-simplebar-secondary] .simplebar-scrollbar:before {
   background: #8f93a4; }
@@ -8838,10 +8838,10 @@ label {
   background: #0acf97; }
 
 [data-simplebar-info] .simplebar-scrollbar:before {
-  background: #36b9cc; }
+  background: #78aed8; }
 
 [data-simplebar-warning] .simplebar-scrollbar:before {
-  background: #f9bc0b; }
+  background: #2b7a9a; }
 
 [data-simplebar-danger] .simplebar-scrollbar:before {
   background: #f1556c; }
@@ -8929,14 +8929,14 @@ label {
   background-color: #349ace !important; }
 
 .bg-soft-primary {
-  color: #36b9cc;
+  color: #78aed8;
   background-color: rgba(68, 162, 210, 0.18); }
   .bg-soft-primary[href] {
-    color: #36b9cc;
+    color: #78aed8;
     text-decoration: none;
     background-color: rgba(68, 162, 210, 0.4); }
     .bg-soft-primary[href]:hover, .bg-soft-primary[href]:focus {
-      color: #36b9cc;
+      color: #78aed8;
       text-decoration: none;
       background-color: rgba(68, 162, 210, 0.4); }
 
@@ -8974,14 +8974,14 @@ label {
   background-color: #1a6ff3 !important; }
 
 .bg-soft-info {
-  color: #36b9cc;
+  color: #78aed8;
   background-color: rgba(45, 123, 244, 0.18); }
   .bg-soft-info[href] {
-    color: #36b9cc;
+    color: #78aed8;
     text-decoration: none;
     background-color: rgba(45, 123, 244, 0.4); }
     .bg-soft-info[href]:hover, .bg-soft-info[href]:focus {
-      color: #36b9cc;
+      color: #78aed8;
       text-decoration: none;
       background-color: rgba(45, 123, 244, 0.4); }
 
@@ -8989,14 +8989,14 @@ label {
   background-color: #eaaf06 !important; }
 
 .bg-soft-warning {
-  color: #f9bc0b;
+  color: #2b7a9a;
   background-color: rgba(249, 188, 11, 0.18); }
   .bg-soft-warning[href] {
-    color: #f9bc0b;
+    color: #2b7a9a;
     text-decoration: none;
     background-color: rgba(249, 188, 11, 0.4); }
     .bg-soft-warning[href]:hover, .bg-soft-warning[href]:focus {
-      color: #f9bc0b;
+      color: #2b7a9a;
       text-decoration: none;
       background-color: rgba(249, 188, 11, 0.4); }
 
@@ -9096,11 +9096,11 @@ button, a {
   color: #eff2f7 !important; }
 
 .btn-soft-primary {
-  color: #36b9cc;
+  color: #78aed8;
   background-color: rgba(68, 162, 210, 0.25); }
   .btn-soft-primary:hover {
     color: #fff;
-    background-color: #36b9cc; }
+    background-color: #78aed8; }
 
 .btn-soft-secondary {
   color: #8f93a4;
@@ -9117,18 +9117,18 @@ button, a {
     background-color: #0acf97; }
 
 .btn-soft-info {
-  color: #36b9cc;
+  color: #78aed8;
   background-color: rgba(45, 123, 244, 0.25); }
   .btn-soft-info:hover {
     color: #fff;
-    background-color: #36b9cc; }
+    background-color: #78aed8; }
 
 .btn-soft-warning {
-  color: #f9bc0b;
+  color: #2b7a9a;
   background-color: rgba(249, 188, 11, 0.25); }
   .btn-soft-warning:hover {
     color: #fff;
-    background-color: #f9bc0b; }
+    background-color: #2b7a9a; }
 
 .btn-soft-danger {
   color: #f1556c;
@@ -9323,7 +9323,7 @@ button, a {
   line-height: 38px;
   text-align: center;
   background-color: #21253e;
-  color: #36b9cc;
+  color: #78aed8;
   border-radius: 50%; }
 
 .badge-icon .icon-badge {
@@ -9354,7 +9354,7 @@ button, a {
       border: none; }
       .nav-tabs-custom .nav-item .nav-link::after {
         content: "";
-        background: #36b9cc;
+        background: #78aed8;
         height: 2px;
         position: absolute;
         width: 100%;
@@ -9365,7 +9365,7 @@ button, a {
         -webkit-transform: scale(0);
                 transform: scale(0); }
       .nav-tabs-custom .nav-item .nav-link.active {
-        color: #36b9cc; }
+        color: #78aed8; }
         .nav-tabs-custom .nav-item .nav-link.active:after {
           -webkit-transform: scale(1);
                   transform: scale(1); }
@@ -9397,8 +9397,8 @@ button, a {
 .pagination > .active > a:focus,
 .pagination > .active > span:focus,
 .page-item.active .page-link {
-  background: #36b9cc;
-  border-color: #36b9cc; }
+  background: #78aed8;
+  border-color: #78aed8; }
 
 /*-- Costum --*/
 .pagination .page-link {
@@ -9426,14 +9426,14 @@ button, a {
 .custom-pagination .active .page-link {
   background-color: rgba(68, 162, 210, 0.15);
   border: 1px solid rgba(68, 162, 210, 0.5);
-  color: #36b9cc;
+  color: #78aed8;
   border-radius: 50%; }
 
 .custom-pagination2 li {
   vertical-align: middle; }
 
 .custom-pagination2 span {
-  color: #36b9cc;
+  color: #78aed8;
   background-color: rgba(68, 162, 210, 0.15);
   border: 1px solid rgba(68, 162, 210, 0.5);
   width: 36px;
@@ -9471,7 +9471,7 @@ button, a {
   height: 10px; }
 
 .progress-bar {
-  background-color: #36b9cc; }
+  background-color: #78aed8; }
 
 .progress-animated {
   width: 0;
